Features/cruds (#4)
* add find for users

* fix null fields

* fix misc typefields and annotations

* create reservation dto

* fix missing fields in user mapping

* create reservation service use case

* define update and delete methods for user

* implement reservation endpoints

* create departmentDto

* implement department cruds

* make findAll pageable

* fix entity field definitions

* add jpamodelgen dependency

* fix email verification

* implement mapStruct

* fix mapping in service classes

* perform refactoring regarding token query

* update role permissions

* standardize exception messages

* modify department use-case

* modify desktop use-case

* include department-desktop roles and permissions

* update pom file

* fix missing fields and annotations

* add specification conflict check for timeslot

* add more DTO validation

* fix reservation-desktop use-case